deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebc-service
spec:
  ports:
    - port: 5000
  selector:
    app: ebc-server
